[package]
name = "rk-codegen"
version = "0.1.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.26"

[dependencies.syn]
version = "1.0.68"
features= ["full", "extra-traits"]

[workspace]
members = ["dev"]


[lib]
proc_macro=true
